# ATLAS_DASH

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile.web  Makefile  PLAN.md  PROGRESS.md  README.md  RELEASE_CHECKLIST.md  SECURITY_REVIEW.md  deploy.md  docker-compose.yml  eslint.config.mjs  fix_fs.py  index.html  package-lock.json  package.json  plan.md  plasmic.json  pnpm-lock.yaml  progress-settings.md  progress.md  proxy.mjs  settings-redesign-plan.md  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
.agent-workflows/models-tools-refactor/: 00_START_HERE.md
.github/workflows/: ci.yml  release.yml
apps/web/: eslint.config.mjs  next.config.ts  package.json  playwright.auth.config.ts  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.integration.config.ts
backup/: Dockerfile  README.md  backup.sh  crontab  entrypoint.sh  rclone.conf.template
deploy/: .env.example  Caddyfile  Dockerfile.api  Dockerfile.web  docker-compose.yml
docker/: Dockerfile.web  compose.yaml
docs/: ATLAS_DASH_DEPLOY.md  MASTER_PLAN.md  PROGRESS.md  ROADMAP.md  TABS-universal-main-wrapper-PRD.md  V1_M1_CAPABILITY_AUDIT.md  V1_M2_MODULE_MAP.md  backup-restore.md  backup.md  deploy.md  implementation-issues.md  prompts.md  restore.md  settings-models-tools-refactor-audit.md  tauri-web-sync-handoff.md  tray-window-debug-handoff.md  ui-component-token-migration.md  ui-container-query-report.md  ui-layout-audit.md  ui-responsive-behavior.md  workspace-pivot-plan.md
docs/CODEX_HANDOFF/: 00_commit_and_push.md  (+12 more)
scripts/: backup-create.sh  backup-restore.sh  backup-verify.sh  build-signed.ps1  check-deployment-artifacts.sh  generate-auth-password-hash.mjs  lint.mjs  make-latest-json.mjs  sync-models-dev.mjs  version-bump.mjs
server/: .env.example  .env.test  .gitignore  Dockerfile  README.md  docker-compose.test.yml  index.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
src/: App.css  App.css.backup  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  search.rs  tray.rs
src-tauri/src/ai_tools/: fs_ops.rs  mod.rs  sandbox.rs  search.rs  shell.rs
src-tauri/src/commands/: mod.rs  search.rs  secrets.rs  terminal.rs
src-tauri/src/terminal/: mod.rs  registry.rs  session.rs
tabs_crm_forms_plan_package/: ARCHITECTURE_NOTES.md  README.md  manifest.json
vscode_swarm_models_tools_refactor_pack/: 01_FILE_INSTRUCTIONS.md
(+716 files in other folders)
