[package]
name = "tabs"
version = "0.1.0"
description = "TABS - Writing and task manager with AI assistance"
authors = ["TABS"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tabs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
keyring = "3"
